Bug 319489 - Rekonq session not restored with KDE session management
Summary: Rekonq session not restored with KDE session management
Status: RESOLVED FIXED
Alias: None
Product: rekonq
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 2.3.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Andrea Diamantini
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-07 18:53 UTC by Michael Reiher
Modified: 2013-06-25 20:54 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Reiher 2013-05-07 18:53:09 UTC
Rekonq sessions are not restored when the KDE session is restored on login.

Part of the problems seems to be that the session is not saved properly. There is no rekonq entry in .kde/share/config/ksmserverrc, so obviously nothing gets restored.

I do though get a rekonq session file in .kde/share/config/session/ with content:

[Number]
NumberOfWindows=1

[WindowProperties1]
ClassName=RekonqWindow
Height 1050=840
ObjectName=win1
Width 1680=1344
geometry-1680-1050=AdnQywABAAAAAACoAAAAaQAABe0AAAPLAAAAqwAAAIAAAAXqAAADxwAAAAAAAA==

However when I manually try to restore this session I only get an entirely empty rekonq window.

I have rare cases where there is an entry in ksmserverrc and where something is indeed restored. But it's also just an entirely emtpy window.

Reproducible: Always

Steps to Reproduce:
1. Start a Rekonq session with a few tabs
2. Logout of KDE
3. Login to KDE again
Actual Results:  
No Rekonq is restored.

Expected Results:  
Restore Rekonq session that was active on logout.
Comment 1 Michael Reiher 2013-05-07 18:54:13 UTC
KDE version is 4.10.2
Comment 2 David E. Narvaez 2013-05-21 03:16:40 UTC
Git commit 8981a7b2ddc3ece450f52783fa561c01a61b4e61 by David E. Narváez.
Committed on 21/05/2013 at 05:15.
Pushed by narvaez into branch 'master'.

Don't Save Sessions When Closing Tabs from Logout

Check if we're saving session (on KDE logout) before requesting the
session to save. This will allow Rekonq to restore sessions on next
login.
REVIEW: 110530

M  +5    -1    src/application.cpp

http://commits.kde.org/rekonq/8981a7b2ddc3ece450f52783fa561c01a61b4e61
Comment 3 David E. Narvaez 2013-05-21 03:17:54 UTC
Can you all test and report if this fixes session restore for you? It did for me, although the symptoms were not the same as the ones reported here.
Comment 4 Marwell 2013-06-22 12:18:01 UTC
Confirmed.
I experienced exactly the same as Michael Reiher described above (using KDE 4.10.3).
Comment 5 Michael Reiher 2013-06-25 19:21:12 UTC
Just tested with rekonq 2.3.1. It might be that restoring sessions when starting rekonq works better now. However restoring via KDE session still doesn't work here. 

As written above: there is no entry in ksmserverrc. So no rekonq instance is run on startup and no session is restored (provided the latter works now).
Comment 6 David E. Narvaez 2013-06-25 20:54:06 UTC
Git commit d4458db696a60760ca079eaf10d38119a3287b99 by David E. Narváez.
Committed on 25/06/2013 at 20:51.
Pushed by narvaez into branch 'master'.

Ignore Close Event Filtering Altogether when Saving Session

A stronger version of 8981a7b2 that guarantees that Rekonq will be
included in the session restore configuration file

M  +3    -6    src/application.cpp

http://commits.kde.org/rekonq/d4458db696a60760ca079eaf10d38119a3287b99