Ignore Close Event Filtering Altogether when Saving Session

A stronger version of 8981a7b2 that guarantees that Rekonq will be
included in the session restore configuration file

BUG: 319489